CHANGELOG VERSIONX

VersionX 1.0 Alpha4 (to be released)
===================================
- #30: Improve error display when no changes were made (New lexicon string added to English file)
- #19: Fix plugin code to save full timestamp as UNIX timestamp, and format in getlist process.
- #34: Fix lexicon reference for "no" in getlist. Improve content_disposition display.
- Added copyright notice in Russian translation.
- #37: Update link to modx.com instead of modxcms.com
- #21: Lexicon-ify error messages of processor output. (New lexicon strings added to English file)
- Re #18: Add check for php >5.3.0 when comparing resource content (prevents E_DEPRECEATED error for split() in xpdorevisioncontrol)
- #21: Encode errors returned by processors to json to prevent ajax loader getting stuck
- Display template ID in view details when template could not be found
- Replaced 0 with empty string when no parent exists in view details
- #23: Show parent ID next to title in view details
- #20: Translated resource field names, yes/no and some error messages in revision details window / getlist processor
- #2: Added pagination to resource overview
- Added Russian translation (elastic)

VersionX 1.0 Alpha3 (Released 14/1/2011)
========================================
- [#13] Added a few more lexicon strings, improved some error handling, improved code readability
- [#4/#6/#14] Updated grid list processor for usability (date formatting, boolean is now yes/no, editedby (and similar) now gives users full name, template shows template name..
- [#11] Increased width of modal windows. Moved content to its own tab in view details window.
- [#10] Rewrote processor request for restore to make it functional again.
- Renamed processor files to lowercase to prevent it from failing.
- [#15] Removed slash for better path handling (smooth-graphics)
- [#9/#15] Better distribution of columns in main grid (smooth-graphics)
- [#10] Remove mention of an overview from lexicons