@@ -2,6 +2,7 @@ CHANGELOG VERSIONX
 
 VersionX 1.0 Alpha4 (to be released)
 ===================================
+- #36: Add Dutch translation to the package. 
 - #30: Improve error display when no changes were made (New lexicon string added to English file)
 - #19: Fix plugin code to save full timestamp as UNIX timestamp, and format in getlist process.
 - #34: Fix lexicon reference for "no" in getlist. Improve content_disposition display.
